--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "prop-types": "^15.5.10",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "rebass": "^1.0.4",
     "styled-components": "^2.1.2"
   }
 }
